<resources>
	<!-- Generic -->
	<string name="app_name">RSS Wallpaper</string>
	<string name="developer_email">kevin@broh-kahn.com</string>
	<string name="developer_name">Kevin Broh-Kahn</string>
	<string name="ok">OK</string>
	<string name="request">Request</string>
	<string name="cancel">Cancel</string>
	<string name="save">Save</string>
	<string name="downloaded_on">Downloaded on %1$s</string>
	<string name="view_web_page">View on web</string>
	<string name="starting_download">Downloading images for included RSS feed, this may take a few seconds.</string>

	<!-- Permissions -->
	<string name="set_wallpaper_title">Change Wallpaper</string>
	<string name="set_wallpaper_message">RSS Wallpaper was designed to change your wallpaper to new images from RSS
		feeds, however you can ignore this feature and use the app to merely download images. Do you want to keep
		your current wallpaper or let RSS Wallpaper change it?</string>
	<string name="set_wallpaper_positive_button">Set Wallpaper</string>
	<string name="set_wallpaper_negative_button">Don\'t change</string>

	<!-- Permissions -->
	<string name="permission_request_title">Storage Access Required</string>
	<string name="permission_request_message">To set a custom storage location, the app needs permissions to write to
		your device\'s storage. Please hit continue to grant the permission.</string>
	<string name="permission_request_positive_button">Continue</string>
	<string name="permission_request_negative_button">Never mind</string>

	<!-- Request feed dialog -->
	<string name="request_feed_dialog_title">Request RSS feed</string>
	<string name="request_feed_dialog_message">Please enter the URL for the feed you would like to use. Then click "Request" to send us an email, and we will get back to you shortly to let you know whether your feed has been added!
	\n\nNote: some RSS feeds may not be compatible with the app.</string>
	<!-- Request feed email -->
	<string name="request_feed_email_subject">RSS Wallpaper: RSS feed request</string>
	<string name="request_feed_email_message">Requested feed URL: %1$s.</string>

	<!-- Set feed dialog -->
	<string name="set_feed_dialog_title">Set new RSS feed</string>
	<string name="set_feed_dialog_message">Do you want to change your wallpaper according to the %1$s feed?</string>

	<!-- Change wallpaper dialog -->
	<string name="change_wallpaper_title">Changing wallpaper, please wait&#8230;</string>
	<string name="change_wallpaper_message">Image may need to be resized or downloaded before being set as wallpaper.</string>

	<!-- Change directory dialog -->
	<string name="change_directory_title">Moving images to new directory, please wait&#8230;</string>
	<!--<string name="change_directory_message">Image may need to be resized or downloaded before being set as wallpaper.</string>-->

	<!-- Image and RSSFeed strings -->
	<string name="no_current_wallpaper">No wallpaper set</string>
	<string name="current_background">Current wallpaper</string>
	<string name="current_image">Current image</string>
	<!--<string name="restart_service">Restart service</string>-->
	<string name="no_item_placeholder">No wallpaper set.</string>
	<string name="item_downloaded">Image downloaded</string>
	<string name="item_enabled">Item enabled</string>

	<!-- Activity strings -->
	<string name="activity_about">About</string>
	<string name="activity_settings">Settings</string>
	<string name="activity_feeds">Available Feeds</string>
	<!--<string name="activity_help">Help</string>-->
	<string name="activity_rss_feed_view">RSS Feed Details</string>

	<!-- Actions -->
	<string name="action_next_item">Next wallpaper</string>
	<string name="action_disable">Disable current image</string>
	<string name="action_view_items_all">View all items</string>
	<string name="action_view_item_details">RSS Item Details</string>
	<string name="action_update_feeds">Update available feeds</string>
	<string name="action_request_feeds">Request feeds</string>
	<string name="action_view_items_disabled">View disabled items</string>
	<string name="action_view_logs">View logs</string>

	<!-- About -->
	<string name="about_package_text">Package %1$s</string>
	<string name="about_version_text">Version %1$s</string>
	<string name="about_developer_text">Developed by %1$s</string>
	<string name="about_app_text">Please do not hesitate to send any feedback or questions to %1$s!</string>

	<!-- Directory chooser -->
	<string name="exit_directory">Back</string>
	<string name="create_directory">New folder</string>
	<string name="create_directory_hint">Enter folder name</string>


	<!-- App settings keys -->
	<string name="key_current_item">currentItem</string>

	<!-- SETTINGS-->

	<!-- Headers -->
	<string name="pref_header_rss_feed">RSS Feed</string>
	<string name="pref_header_wallpaper">Wallpaper</string>
	<string name="pref_header_notifications">Notifications</string>
	<string name="pref_header_storage">Manage storage</string>

	<!-- User keys-->
	<!-- RSS RSSFeed -->
	<string name="key_current_feed">currentFeed</string>
	<string name="key_update_interval">updateInterval</string>
	<string name="key_update_wifi_only">updateWifiOnly</string>
	<string name="key_update_time">updateTime</string>
	<!-- Wallpaper -->
	<string name="key_number_to_rotate">numberToRotate</string>
	<string name="key_shuffle">shuffle</string>
	<string name="key_change_interval">changeInterval</string>
	<string name="key_set_home_screen">setHomeScreen</string>
	<string name="key_set_lock_screen">setLockScreen</string>
	<string name="key_crop_and_scale_type">cropAndScaleType</string>
	<string name="key_receive_broadcast">receiveBroadcast</string>
	<!-- Notifications -->
	<string name="key_show_message_toasts">showMessageToasts</string>
	<string name="key_show_error_toasts">showErrorToasts</string>
	<!-- Storage -->
	<string name="key_delete_items">deleteItems</string>
	<string name="key_delete_logs">deleteLogs</string>
	<!--<string name="key_store_icons">storeIcons</string>-->
	<string name="key_purge_unused_images">purgeUnusedImages</string>
	<string name="key_image_storage">imageLocation</string>
	<string name="key_compression_type">compressionType</string>
	<string name="key_resize_images">resizeImages</string>

	<!-- Titles -->
	<!-- RSS RSSFeed -->
	<string name="title_current_feed">Current Feed</string>
	<string name="title_update_interval">Update interval</string>
	<string name="title_update_wifi_only">Update using Wifi Only</string>
	<string name="title_update_time">Update time</string>
	<!-- Wallpaper -->
	<string name="title_number_to_rotate">Number of images to rotate</string>
	<string name="title_shuffle">Shuffle rotated images</string>
	<string name="title_change_interval">Change interval</string>
	<string name="title_set_home_screen">Set home wallpaper</string>
	<string name="title_set_lock_screen">Set lock wallpaper</string>
	<string name="title_crop_and_scale_type">Crop and scale</string>
	<string name="title_receive_broadcast">Change Wallpaper using intent</string>
	<!-- Notifications -->
	<string name="title_show_message_toasts">Show basic messages</string>
	<string name="title_show_error_toasts">Show error messages</string>
	<!-- Storage -->
	<string name="title_delete_items">Delete Items</string>
	<string name="title_delete_logs">Delete Logs</string>
	<string name="title_store_icons">Use Image Icons</string>
	<string name="title_purge_unused_images">Delete unused images</string>
	<string name="title_image_storage">Image storage location</string>
	<string name="title_compression_type">Image Compression Type</string>
	<string name="title_resize_images">Shrink Downloaded Images</string>

	<!-- Summaries -->
	<!-- RSS RSSFeed -->
	<!-- Wallpaper -->
	<string name="summary_set_lock_screen">Must have Android 7.0 or later</string>
	<string name="summary_receive_broadcast">Copy intent action name to be broadcast</string>
	<!-- Notifications -->
	<string name="summary_show_message_toasts">Like when wallpaper is changing</string>
	<string name="summary_show_error_toasts">Like inability to download an image</string>
	<!-- Storage -->
	<string name="summary_delete_items">If app not working properly</string>
	<string name="summary_delete_logs">Automatically purged after 1 week</string>
	<string name="summary_purge_unused_images">When no longer in wallpaper rotation</string>
	<string name="summary_resize_images">Down to screen height</string>


	<!-- defaults -->
	<string name="compression_type_default">NONE</string>
	<string name="image_storage_default">LOCAL</string>



	<!-- Values -->
	<!-- RSS RSSFeed -->
	<string-array name="titles_array_update_interval">
		<item>1 hour</item>
		<item>3 hours</item>
		<item>6 hours</item>
		<item>12 hours</item>
		<item>24 hours</item>
		<item>2 days</item>
		<item>3 days</item>
		<item>5 days</item>
		<item>1 week</item>
	</string-array>
	<string-array name="values_array_update_interval">
		<item>1</item>
		<item>3</item>
		<item>6</item>
		<item>12</item>
		<item>24</item>
		<item>48</item>
		<item>72</item>
		<item>120</item>
		<item>168</item>
	</string-array>
	<string-array name="titles_array_update_time">
		<item>03:00</item>
		<item>06:00</item>
		<item>09:00</item>
		<item>12:00 (Noon)</item>
		<item>15:00</item>
		<item>18:00</item>
		<item>21:00</item>
		<item>24:00 (Midnight)</item>
	</string-array>
	<string-array name="values_array_update_time">
		<item>3</item>
		<item>6</item>
		<item>9</item>
		<item>12</item>
		<item>15</item>
		<item>18</item>
		<item>21</item>
		<item>0</item>
	</string-array>

	<!-- Wallpaper -->
	<string-array name="titles_array_change_interval">
		<item>Never</item>
		<item>5 minutes</item>
		<item>10 minutes</item>
		<item>15 minutes</item>
		<item>20 minutes</item>
		<item>30 minutes</item>
		<item>45 minutes</item>
		<item>1 hour</item>
		<item>3 hours</item>
		<item>6 hours</item>
		<item>12 hours</item>
		<item>24 hours</item>
	</string-array>
	<string-array name="values_array_change_interval">
		<item>-1</item>
		<item>5</item>
		<item>10</item>
		<item>15</item>
		<item>20</item>
		<item>30</item>
		<item>45</item>
		<item>60</item>
		<item>180</item>
		<item>360</item>
		<item>720</item>
		<item>1440</item>
	</string-array>

	<string-array name="titles_array_crop_and_scale_type">
		<item>Scale height</item>
		<item>Scale height and crop center</item>
		<item>Crop center</item>
		<item>Scale width and height</item>
	</string-array>
	<string-array name="values_array_crop_and_scale_type">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
	</string-array>

	<string-array name="titles_array_image_storage">
		<item>Application folder</item>
		<item>Internal storage</item>
		<!--<item>External SD card</item>-->
	</string-array>
	<string-array name="values_array_image_storage">
		<item>LOCAL</item>
		<item>INTERNAL</item>
		<!--<item>EXTERNAL</item>-->
	</string-array>

	<string-array name="titles_array_compression_type">
		<item>PNG</item>
		<item>JPEG</item>
		<item>None (High storage use)</item>
	</string-array>
	<string-array name="values_array_compression_type">
		<item>PNG</item>
		<item>JPEF</item>
		<item>NONE</item>
	</string-array>

	<!-- Delete dialogs  -->
	<string name="delete_items_dialog_message">Recent RSS feed items will be downloaded again, but old ones may be
		lost. Do you want to delete all the items from the RSS feeds?</string>


</resources>
