<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<ListPreference
			android:defaultValue="@string/image_storage_default"
			android:entries="@array/titles_array_image_storage"
			android:entryValues="@array/values_array_image_storage"
			android:key="@string/key_image_storage"
			android:title="@string/title_image_storage"/>

	<SwitchPreference
			android:defaultValue="false"
			android:key="@string/key_purge_unused_images"
			android:summary="@string/summary_purge_unused_images"
			android:title="@string/title_purge_unused_images"/>

	<ListPreference
			android:defaultValue="@string/compression_type_default"
			android:entries="@array/titles_array_compression_type"
			android:entryValues="@array/values_array_compression_type"
			android:key="@string/key_compression_type"
			android:title="@string/title_compression_type"/>


	<SwitchPreference
			android:defaultValue="false"
			android:key="@string/key_resize_images"
			android:summary="@string/summary_resize_images"
			android:title="@string/title_resize_images"/>

	<!--<SwitchPreference-->
	<!--android:defaultValue="true"-->
	<!--android:key="@string/key_store_icons"-->
	<!--android:title="@string/title_store_icons"/>-->
	<Preference
			android:key="@string/key_delete_items"
			android:summary="@string/summary_delete_items"
			android:title="@string/title_delete_items"/>

	<Preference
			android:key="@string/key_delete_logs"
			android:summary="@string/summary_delete_logs"
			android:title="@string/title_delete_logs"/>

</PreferenceScreen>