<?xml version="1.0" encoding="utf-8"?>
<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<LinearLayout
			android:id="@+id/activity_main"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="?attr/actionBarSize"
			android:gravity="center_horizontal"
			android:orientation="vertical"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin"
			tools:context="com.brohkahn.rsswallpaper.MainActivity">

		<TextView
				android:id="@+id/current_feed"
				style="@style/Base.TextAppearance.AppCompat.Medium"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:text="@string/current_background"/>

		<TextView
				android:id="@+id/current_item_title"
				style="@style/Base.TextAppearance.AppCompat.Large"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/default_margin"
				android:gravity="center"
				android:text="@string/no_current_wallpaper"/>

		<TextView
				android:id="@+id/current_item_description"
				android:text="@string/action_view_logs"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/default_margin"
				android:gravity="start"/>

		<ImageView
				android:id="@+id/current_item_image"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:adjustViewBounds="true"
				android:contentDescription="@string/current_image"
				android:scaleType="fitXY"/>


		<LinearLayout
				style="?android:attr/buttonBarStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

			<Button
					android:id="@+id/block_wallpaper_button"
					style="?android:attr/buttonBarButtonStyle"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:onClick="blockCurrentWallpaper"
					android:text="@string/action_disable"/>

			<Button
					android:id="@+id/next_wallpaper_button"
					style="?android:attr/buttonBarButtonStyle"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:onClick="getNewWallpaper"
					android:text="@string/action_next_item"/>

		</LinearLayout>

	</LinearLayout>
</ScrollView>