<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

	<!-- These settings headers are only used on tablets. -->

	<header
		android:fragment="com.brohkahn.rsswallpaper.SettingsActivity$RSSFeedPreferenceFragment"
		android:icon="@drawable/ic_rss_feed_black_24dp"
		android:title="@string/pref_header_rss_feed" />

	<header
		android:fragment="com.brohkahn.rsswallpaper.SettingsActivity$WallpaperPreferenceFragment"
		android:icon="@drawable/ic_panorama_black_24dp"
		android:title="@string/pref_header_wallpaper" />

	<header
		android:fragment="com.brohkahn.rsswallpaper.SettingsActivity$NotificationPreferenceFragment"
		android:icon="@drawable/ic_notifications_black_24dp"
		android:title="@string/pref_header_notifications"/>

	<header
		android:fragment="com.brohkahn.rsswallpaper.SettingsActivity$StoragePreferenceFragment"
		android:icon="@drawable/ic_sd_storage_black_24dp"
		android:title="@string/pref_header_notifications" />


</preference-headers>
