<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.brohkahn.nasawallpaper.MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/current_background" />

        <TextView
            android:id="@+id/current_item_title"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/current_item_published"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/current_item_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web" />

        <ImageView
            android:id="@+id/current_item_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/current_image" />


        <Button
            style="@style/default_button"
            android:onClick="blockCurrentWallpaper"
            android:text="@string/action_disable" />

        <Button
            style="@style/default_button"
            android:onClick="getNewWallpaper"
            android:text="@string/action_next_item" />

        <Button
            style="@style/default_button"
            android:onClick="viewAllItems"
            android:text="@string/action_view_items_all" />


    </LinearLayout>

</ScrollView>